--- a/ConsoleApp7Plus/ConsoleApp7Plus.csproj
+++ b/ConsoleApp7Plus/ConsoleApp7Plus.csproj
@@ -27,5 +27,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Polly" Version="8.4.0" />
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+    <InternalVisibleTo Include="ConsoleApp7Plus.Tests" />
   </ItemGroup>
 </Project>
