fix: Restore dependencies step

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,7 +22,9 @@ jobs:
           dotnet-version: 7.x.x
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: |
+          dotnet restore ConsoleApp7Plus
+          dotnet restore ConsoleApp7Plus.Tests
 
       - name: Test
         run: dotnet test --no-build --verbosity normal
